# fjage-rs

./: .gitignore  Cargo.toml  Cross.toml  README.md
guides/: serial-port-testing.md
logs/: log-0.txt
src/: lib.rs
src/api/: gateway.rs
src/core/: message.rs  mod.rs  param.rs
src/demo/: rx_datagram.rs  tx_datagram.rs
src/ffi/: message.rs  mod.rs  param.rs  util.rs
src/protocol/: base64.rs  connector.rs  frame.rs  mod.rs
src/remote/: container.rs  file.rs  gateway.rs  mod.rs  shell.rs
src/util/: bulk_upload.rs  get_file.rs  mod.rs  put_file.rs  remote_shell.rs  remote_shell_exec.rs  test_agent.rs
tests/docker/: Dockerfile  dummy.groovy  run-amd64.sh  run-arm64.sh
tests/fjage-c/: Makefile  fjage-rs.h  fjage.h  test_fjage.c  test_param_ext.c
tests/unetsocket-c/: Makefile  unet.c
tests/unetsocket-c/samples/: txdata.c  txsignal.c
