[package]
name = "fjage_rs"
version = "0.1.0"
edition = "2021"

[lib]
name="fjage_rs"
path="src/lib.rs"
crate-type=["rlib","staticlib"]

[dependencies]
rand="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64="*"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

