[package]
name = "fjage_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name="tx_datagram"
path="src/demo/tx_datagram.rs"

[[bin]]
name="rx_datagram"
path="src/demo/rx_datagram.rs"

[[bin]]
name="remote_shell"
path="src/util/remote_shell.rs"


[[bin]]
name="remote_shell_exec"
path="src/util/remote_shell_exec.rs"


[[bin]]
name="get_file"
path="src/util/get_file.rs"

[[bin]]
name="put_file"
path="src/util/put_file.rs"

[lib]
name="fjage_rs"
path="src/lib.rs"
crate-type=["rlib","staticlib"]

[dependencies]
rand="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64="*"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

