[package]
name = "fjage_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tx_datagram"
path = "src/demo/tx_datagram.rs"

[[bin]]
name = "rx_datagram"
path = "src/demo/rx_datagram.rs"

[[bin]]
name = "remote_shell"
path = "src/util/remote_shell.rs"


[[bin]]
name = "remote_shell_exec"
path = "src/util/remote_shell_exec.rs"


[[bin]]
name = "get_file"
path = "src/util/get_file.rs"

[[bin]]
name = "put_file"
path = "src/util/put_file.rs"

[[bin]]
name = "bulk_upload"
path = "src/util/bulk_upload.rs"

[lib]
name = "fjage_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "*"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
clap = { version = "4.5.41", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1.0.98"
indicatif = "0.18.0"
env_logger = "0.11.8"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
